# jozet-dotfiles

./: .gitignore  README.md  install.sh  update.sh
.config/: starship.toml
.config/fastfetch/: config.jsonc
.config/gtk-3.0/: settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: hypridle.conf  hyprland.lua
.config/hypr/lua/: ajustes.lua  combinaciones.lua  inicializar.lua  monitores.lua  types.lua  window_rules.lua
.config/hypr/quickshell/: Main.qml  main.qml  shell.qml  theme.qml
.config/hypr/quickshell/Components/: carbonBtn.qml
.config/hypr/waybar/: config  style.css
.config/kitty/: kitty.conf
.config/nvim/: init.lua
.config/quickshell/: CMakeList.txt  LockScreen.qml  Main.qml  shell.qml
.config/quickshell/Assets/: RiceSettings.json
.config/quickshell/Components/: BasePopup.qml  BasePopupBottom.qml  Theme.qml  Workspaces.qml  carbonBtn.qml  qmldir
.config/quickshell/Components/Buttons/: CarbonBtn.qml
.config/quickshell/Components/Pills/: BasePill.qml  BasePillSimple.qml
.config/quickshell/Energy/: EnergyWidget.qml
.config/quickshell/Islands/: CenterIsland.qml  LeftIsland.qml  LeftMonitorIsland.qml  MultimediaIsland.qml  RightIsland.qml  RightMonitorIsland.qml
.config/quickshell/Modules/Disk/: FoldersUsage.qml  HealthDisk.qml  MaintenanceInfo.qml  PartitionsUsage.qml
.config/quickshell/Modules/Energy/: BrightnessModule.qml  EnergyModule.qml
.config/quickshell/Modules/Network/: NetworkActiveBtn.qml  NetworkAvailableList.qml  NetworkDetails.qml  NetworkTypeToggle.qml
.config/quickshell/Modules/Panel/: BluetoothPanelBtn.qml  NetworkPanelBtn.qml  Workspaces.qml
.config/quickshell/Modules/Settings/: AccessPointSection.qml  AppearanceSection.qml  AudioSection.qml  BluetoothSection.qml  EnergySection.qml  NetworkSection.qml  SideBar.qml  SystemSection.qml  UsbSection.qml
.config/quickshell/Modules/Today/: Agenda.qml  Events.qml  UserActivity.qml
.config/quickshell/Modules/Volume/: InputDevices.qml  OutputDevices.qml  PlayingApps.qml
.config/quickshell/Popups/: AgendPopup.qml  AppLauncher.qml  BluetoothPopup.qml  CpuPopup.qml  DiskPopup.qml  EnergyPopup.qml  EventPopup.qml  NetworkPopup.qml  PowerPopup.qml  RamPopup.qml  TempPopup.qml  TodayPopup.qml  VolumePopup.qml  WallpaperSelector.qml  WorkspacesPopup.qml
.config/quickshell/Process/: MainProcess.qml  NetworkManager.cpp  NetworkManeger.h  NetworkProcess.qml
.config/quickshell/Settings/: SettingsPopup.qml
.config/quickshell/Widgets/: EnergyWidget.qml  GlobalRefs.js  Locked.html  WallpaperHoverZone.qml  WallpaperWidget.qml
.config/quickshell/src/: NetProcess.qml  NetworkPlugin.cpp
.config/rofi/: config.rasi
.config/waybar/: config  config.jsonc  style.css
backend/: CMakeLists.txt
backend/System/: SystemManager.cpp  SystemManager.h
backend/System/Readers/: AgendaReader.cpp  AgendaReader.h  BluetoothReader.cpp  BluetoothReader.h  CpuReader.cpp  CpuReader.h  DiskReader.cpp  DiskReader.h  EnergyReader.h  EventsReader.cpp  EventsReader.h  FastfetchReader.cpp  FastfetchReader.h  HyprlandReader.cpp  HyprlandReader.h  NetworkReader.cpp  NetworkReader.h  PamAuthenticator.cpp  PamAuthenticator.h  ProcessReader.cpp  ProcessReader.h  RamReader.cpp  RamReader.h  SettingsReader.cpp  SettingsReader.h  StatsReader.cpp  StatsReader.h  TempReader.cpp  TempReader.h  UdisksReader.cpp  UdisksReader.h  VolumeReader.cpp  VolumeReader.h
home/: .zshrc
